# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: even_game.py  game_engine.py  general_logic.py
brain_games/games/: calc.py  calc_game.py  even_game.py  gcd.py  gcd_game.py  main_logic.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
