[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Study project No. 1 'Brain Games'"
authors = ["KarinA <abdullaeva.karina.r@gmail.com>"]
readme = "README.md"
repository = "https://github.com/KarinaAbd/python-project-49"
classifiers = [
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment
    Topic :: Software Development :: Version Control :: Git
]
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
